2005-02-03  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_ft_font.c (_cairo_ft_font_text_to_glyphs,
	_cairo_ft_font_create_glyph): Fix missing cairo_ft_font_unlock_face().

	* src/cairo_cache.c (_cairo_cache_random_entry): Fix problem
	when no entry could be found.

2005-02-03 Owen Taylor <otaylor@redhat.com>

	* src/cairo_font.c src/cairo.h doc/public/cairo-sections.txt:
	Add cairo_font_extents().

	* src/cairo_win32_font.c src/cairo-win32.h doc/public/cairo-sections.txt:
	Rename cairo_font_create_for_logfont() into
	cairo_font_create_for_logfontw() to make clear what it takes. 
	Don't add cairo_font_create_for_logfonta() for now.

2005-02-02  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_font.c doc/public/cairo-sections.txt
	doc/public/Makefile.am: Add windows functions to the docs.

2005-02-02  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_font.c (cairo_win32_font_select_font,
	cairo_win32_release_font, cairo_win32_font_get_scale_factor):
	Add some functions to select the font into a device context
	with the intention to enable callers to use, e.g, Uniscribe.

	* src/cairo_win32_font.c: Use 'hdc' not 'dc' for param/variable
	name.

2005-02-02 Owen Taylor <otaylor@redhat.com>

	* src/cairo_win32_font.c (cairo_win32_font_select_font,
	cairo_win32_release_font, cairo_win32_font_get_scale_factor):
	Add some functions to select the font into a device context
	with the intention to enable callers to use, e.g, Uniscribe.

	* src/cairo_win32_font.c: Use 'hdc' not 'dc' for param/variable
	name.

	* src/cairo_win32_font.c (_cairo_win32_font_show_glyphs): Return
	immediately if height or width is 0.

2005-02-02 Owen Taylor <otaylor@redhat.com>

	* src/cairo_win32_font.c: Mostly-functioning Win32 font backend;
	no glyph paths yet.

	* configure.in: Turn on building of the Win32 font backend.

	* src/cairo-win32-private.h src/Makefile.am: Private header for
	the Win32 backend.

	* src/cairo-win32-private.h src/cairo_win32_surface.c: 